[project]
name = "loom"
version = "0.1.0"
description = "A custom vector database"
authors = [
    {name = "Nii-Armah",email = "stanleyniiarmah7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
